--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "mineflayer": "^4.8.1",
-    "mineflayer-pathfinder": "^2.4.2"
+    "mineflayer": "^4.26.0",
+    "mineflayer-movement": "^0.4.4",
+    "mineflayer-pathfinder": "^2.4.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
